--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "main": "index.js",
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "serverless deploy -v",
+    "function-deploy": "serverless deploy --function serverless-meow"
   },
   "repository": {
     "type": "git",
