Add html templating

--- a/serverless.yml
+++ b/serverless.yml
@@ -103,6 +103,11 @@ functions:
       - http:
           path: /
           method: get
+          integration: lambda
+          response:
+            headers:
+              Content-Type: "'text/html'"
+            template: $input.path('$')
 
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
